cmake_minimum_required(VERSION 3.24)
project(assignment1)

set(CMAKE_CXX_STANDARD 17)

cmake_minimum_required(VERSION 3.24)
project(assignment1)

set(CMAKE_CXX_STANDARD 17)

add_executable(assignment1
        main.cpp
        CardGame.h
        Player.h
        PlayerYouth.h
        CardGameAdapter.cpp
        CardGameAdapter.h
        PlayerAdult.h
        utilities.h)

